tests/errors/list_literal_type_mismatch.dang
# This should fail: mixing types in list literal
let result = [[], ["foo"], [3]]
